--- a/apply.html
+++ b/apply.html
@@ -202,8 +202,8 @@
 
 								<!-- Details -->
 								<div class="job-listing-description">
-									<h4 class="job-listing-company">Need chemistry tutor <span class="verified-badge" title="Verified Employer" data-tippy-placement="top"></span></h4>
-									<h3 class="job-listing-title">Restaurant Manager</h3>
+									<h4 class="job-listing-company">Chemistry tutor <span class="verified-badge" title="Verified Employer" data-tippy-placement="top"></span></h4>
+									<h3 class="job-listing-title">Highschool</h3>
 								</div>
 							</div>
 
