--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 <!-- Intro Banner
 ================================================== -->
 <!-- add class "disable-gradient" to enable consistent background overlay -->
-<div class="intro-banner" data-background-image="images/home-background.jpg">
+<div class="intro-banner" data-background-image="images/bg.webp">
 	<div class="container">
 		
 		<!-- Intro Headline -->
@@ -284,7 +284,7 @@
 	</div>
 </div>
 
-<div class="photo-section" data-background-image="images/section-background.jpg">
+<div class="photo-section" data-background-image="images/cover.webp">
 
 	<!-- Infobox -->
 	<div class="text-content white-font">
@@ -500,7 +500,7 @@
 
 			<div class="col-xl-3 col-md-6">
 				<!-- Photo Box -->
-				<a href="tutors.html" class="photo-box" data-background-image="images/featured-city-01.jpg">
+				<a href="tutors.html" class="photo-box" data-background-image="images/aa.jpg">
 					<div class="photo-box-content">
 						<h3>Addis Ababa</h3>
 						<span>376 Tutees</span>
@@ -510,7 +510,7 @@
 			
 			<div class="col-xl-3 col-md-6">
 				<!-- Photo Box -->
-				<a href="tutors.html" class="photo-box" data-background-image="images/featured-city-02.jpg">
+				<a href="tutors.html" class="photo-box" data-background-image="images/bahirdar.jpeg">
 					<div class="photo-box-content">
 						<h3>Bahir Dar</h3>
 						<span>645 Tutees</span>
@@ -520,7 +520,7 @@
 			
 			<div class="col-xl-3 col-md-6">
 				<!-- Photo Box -->
-				<a href="tutors.html" class="photo-box" data-background-image="images/featured-city-03.jpg">
+				<a href="tutors.html" class="photo-box" data-background-image="images/adama.jpeg">
 					<div class="photo-box-content">
 						<h3>Adama</h3>
 						<span>832 Tutees</span>
@@ -530,7 +530,7 @@
 
 			<div class="col-xl-3 col-md-6">
 				<!-- Photo Box -->
-				<a href="tutors.html" class="photo-box" data-background-image="images/featured-city-04.jpg">
+				<a href="tutors.html" class="photo-box" data-background-image="images/hawasa.jpeg">
 					<div class="photo-box-content">
 						<h3>Hawasa</h3>
 						<span>513 Tutees</span>
