--- a/profile.html
+++ b/profile.html
@@ -108,7 +108,7 @@
 					<div class="left-side">
 						<div class="header-image freelancer-avatar"><img src="images/user-avatar-big-02.jpg" alt=""></div>
 						<div class="header-details">
-							<h3>Amanuel Afro <span>Mathematics Teacher</span></h3>
+							<h3>Emanuel Afro <span>Mathematics Teacher</span></h3>
 							<ul>
 								<li><div class="star-rating" data-rating="5.0"></div></li>
 								<li><i class="icon-material-outline-location-on"></i> Addis Ababa</li>
