--- a/tutees.html
+++ b/tutees.html
@@ -233,7 +233,7 @@
 
 							<!-- Name -->
 							<div class="freelancer-name">
-								<h4><a href="profile.html">Amanuel Afro </a></h4>
+								<h4><a href="profile.html">Emanuel Afro </a></h4>
 								<span>Physics teacher</span>
 								<!-- Rating -->
 								<div class="freelancer-rating">
