--- a/post-form.html
+++ b/post-form.html
@@ -113,13 +113,13 @@
 			
 			<!-- Dashboard Headline -->
 			<div class="dashboard-headline">
-				<h3>Post a Job</h3>
+				<h3>Post a Tutor</h3>
 
 				<!-- Breadcrumbs -->
 				<nav id="breadcrumbs" class="dark">
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li>Post a Job</li>
+						<li>Post a Tutor</li>
 					</ul>
 				</nav>
 			</div>
