--- a/student/login.html
+++ b/student/login.html
@@ -107,7 +107,7 @@
 									<ul>
 										<!-- Notification -->
 										<li class="notifications-not-read">
-											<a href="dashboard-manage-candidates.html">
+											<a href="profile.html">
 												<span class="notification-icon"><i class="icon-material-outline-group"></i></span>
 												<span class="notification-text">
 													<strong>Michael Shannah</strong> applied for a job <span class="color">Full Stack Software Engineer</span>
@@ -117,7 +117,7 @@
 
 										<!-- Notification -->
 										<li>
-											<a href="dashboard-manage-bidders.html">
+											<a href="profile.html">
 												<span class="notification-icon"><i class=" icon-material-outline-gavel"></i></span>
 												<span class="notification-text">
 													<strong>Gilbert Allanis</strong> placed a bid on your <span class="color">iOS App Development</span> project
@@ -127,7 +127,7 @@
 
 										<!-- Notification -->
 										<li>
-											<a href="dashboard-manage-jobs.html">
+											<a href="profile.html">
 												<span class="notification-icon"><i class="icon-material-outline-autorenew"></i></span>
 												<span class="notification-text">
 													Your job listing <span class="color">Full Stack PHP Developer</span> is expiring.
@@ -137,7 +137,7 @@
 
 										<!-- Notification -->
 										<li>
-											<a href="dashboard-manage-candidates.html">
+											<a href="profile.html">
 												<span class="notification-icon"><i class="icon-material-outline-group"></i></span>
 												<span class="notification-text">
 													<strong>Sindy Forrest</strong> applied for a job <span class="color">Full Stack Software Engineer</span>
@@ -173,7 +173,7 @@
 									<ul>
 										<!-- Notification -->
 										<li class="notifications-not-read">
-											<a href="dashboard-messages.html">
+											<a href="messages.html">
 												<span class="notification-avatar status-online"><img src="images/user-avatar-small-03.jpg" alt=""></span>
 												<div class="notification-text">
 													<strong>Abebe man</strong>
@@ -185,7 +185,7 @@
 
 										<!-- Notification -->
 										<li class="notifications-not-read">
-											<a href="dashboard-messages.html">
+											<a href="messages.html">
 												<span class="notification-avatar status-offline"><img src="images/user-avatar-small-02.jpg" alt=""></span>
 												<div class="notification-text">
 													<strong>Betty Feleke</strong>
@@ -197,7 +197,7 @@
 
 										<!-- Notification -->
 										<li class="notifications-not-read">
-											<a href="dashboard-messages.html">
+											<a href="messages.html">
 												<span class="notification-avatar status-online"><img src="images/user-avatar-placeholder.png" alt=""></span>
 												<div class="notification-text">
 													<strong>Marti ayele</strong>
