--- a/mentor/login.html
+++ b/mentor/login.html
@@ -86,7 +86,7 @@
 					<!-- Messages -->
 					<div class="header-notifications">
 						<div class="header-notifications-trigger">
-							<a href="index.html#"><i class="icon-feather-mail"></i><span>3</span></a>
+							<a href="index.html#"><i class="icon-feather-mail"></i><span></span></a>
 						</div>
 
 						<!-- Dropdown -->
@@ -103,40 +103,7 @@
 								<div class="header-notifications-scroll" data-simplebar>
 									<ul>
 										<!-- Notification -->
-										<li class="notifications-not-read">
-											<a href="messages.html">
-												<span class="notification-avatar status-online"><img src="images/user-avatar-small-03.jpg" alt=""></span>
-												<div class="notification-text">
-													<strong>Abebe man</strong>
-													<p class="notification-msg-text">Thanks for reaching out. I'm quite busy right now on many...</p>
-													<span class="color">4 hours ago</span>
-												</div>
-											</a>
-										</li>
-
-										<!-- Notification -->
-										<li class="notifications-not-read">
-											<a href="messages.html">
-												<span class="notification-avatar status-offline"><img src="images/user-avatar-small-02.jpg" alt=""></span>
-												<div class="notification-text">
-													<strong>Betty Feleke</strong>
-													<p class="notification-msg-text">Hi Tom! Hate to break it to you, but I'm actually on vacation until...</p>
-													<span class="color">Yesterday</span>
-												</div>
-											</a>
-										</li>
-
-										<!-- Notification -->
-										<li class="notifications-not-read">
-											<a href="messages.html">
-												<span class="notification-avatar status-online"><img src="images/user-avatar-placeholder.png" alt=""></span>
-												<div class="notification-text">
-													<strong>Marti ayele</strong>
-													<p class="notification-msg-text">I received payment. Thanks for cooperation!</p>
-													<span class="color">Yesterday</span>
-												</div>
-											</a>
-										</li>
+										
 									</ul>
 								</div>
 							</div>
@@ -226,12 +193,12 @@
 			<form method="post" id="login-form">
 				<div class="input-with-icon-left">
 					<i class="icon-feather-user"></i>
-					<input type="text" class="input-text with-border" name="username" id="emailaddress" placeholder="Username" required/>
+					<input type="text" class="input-text with-border" name="em" id="emailaddress" placeholder="Username" required/>
 				</div>
 
 				<div class="input-with-icon-left">
 					<i class="icon-material-outline-lock"></i>
-					<input type="password" class="input-text with-border" name="password" id="password" placeholder="Password" required/>
+					<input type="password" class="input-text with-border" name="ps" id="password" placeholder="Password" required/>
 				</div>
 				<div class="notification error closeable" id="err-msg" style="display: none;">
 					<p>Incorrect username or password</p>
@@ -242,7 +209,7 @@
 			</form>
 			
 			<!-- Button -->
-			<button class="button full-width button-sliding-icon ripple-effect" style="margin-top: 20px;" type="submit" form="login-form">Log In <i class="icon-material-outline-arrow-right-alt"></i></button>
+			<button class="button full-width button-sliding-icon ripple-effect" id="l-btn" style="margin-top: 20px;" type="submit" form="login-form">Log In <i class="icon-material-outline-arrow-right-alt"></i></button>
 			
 			<!-- Social Login -->
 			
@@ -289,12 +256,49 @@ $('#snackbar-user-status label').click(function() {
 
 $('#login-form').submit(function(e){
     e.preventDefault();
-	if(e.target.username.value == 'mentor' && e.target.password.value == '1234pass'){
-		localStorage.setItem('yeneta_token', 'token1234')
-		window.location.href = 'index.html'
-	} else {
-		document.getElementById('err-msg').style.display = 'block'
+	let target = e.target;
+	let loader = `
+		<div class="typing-indicator">
+			<span></span>
+			<span></span>
+			<span></span>
+		</div>
+	`, btn = document.getElementById('l-btn');
+
+	btn.innerHTML = loader
+	btn.disabled = true
+	btn.style.cursor = 'not-allowed'
+	btn.style.display = 'flex'
+	btn.style.justifyContent = 'center'
+
+	let data = {
+		Email: target.em.value,
+		Password: target.ps.value
 	}
+
+	fetch(window.constants.baseUrl + '/Yeneta/mentor/login', {
+		method: 'post',
+		body: JSON.stringify(data),
+		headers: {
+			'Content-Type': 'application/json'
+		}
+	}).then(r => r.json())
+	.then(d => {
+		console.log(d)
+		if(d.status == 'Sucess'){
+			localStorage.setItem('yeneta_mentor_token', d.token)
+			localStorage.setItem('yeneta_mentor', JSON.stringify(d.mentor))
+			window.location.href = 'index.html'
+		} else {
+			btn.disabled = false
+			btn.style.display = 'block'
+			btn.style.cursor = 'pointer'
+			btn.innerHTML = 'Log In <i class="icon-material-outline-arrow-right-alt"></i>'
+			document.getElementById('err-msg').style.display = 'block'
+		}
+	}).catch(e => console.log(e));
+	
+	
 })
 </script>
 
