--- a/mentor/tutors.html
+++ b/mentor/tutors.html
@@ -346,7 +346,7 @@ window.addEventListener('DOMContentLoaded', function(){
 						<!-- Details -->
 						<div class="job-listing-description">
 							<h4 class="job-listing-company">${w.Title}</h4>
-							<h3 class="job-listing-title">${w.Subjects}y</h3>
+							<h3 class="job-listing-title">${w.Subjects}</h3>
 						</div>
 					</div>
 
